--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "library-app",
-    "slug": "library-app",
+    "name": "Read&Lend",
+    "slug": "read-and-lend",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
